Say all animals like all homes

--- a/d2/beasts2.json
+++ b/d2/beasts2.json
@@ -1,7 +1,12 @@
 {
   "animals": [
-    {"id": 344, "species": "dog"},
-    {"id": 312, "species": "cat"},
-    {"id": 1144, "species": "bird"}
+    {"id": 344, "species": "dog", "name": "vyall"},
+    {"id": 312, "species": "cat", "name": "sorba"},
+    {"id": 1144, "species": "bird", "name": "sim"}
+  ],
+  "homes": [
+    {"id": 78, "address": "2 north street", "owner": "vib"},
+    {"id": 18, "address": "33 under street", "owner": "brya"},
+    {"id": 23, "address": "1 flea street", "owner": "gee"}
   ]
 }
