Show effect of undefined on a set doc
With:

opa eval -i beasts2.json -d cross-product-ish.rego 'data'

the non-undefined members of the "set document" (which is what I call
rule[var_name]) are still in the rule output.

--- a/d2/beasts2.json
+++ b/d2/beasts2.json
@@ -7,6 +7,6 @@
   "homes": [
     {"id": 78, "address": "2 north street", "owner": "vib"},
     {"id": 18, "address": "33 under street", "owner": "brya"},
-    {"id": 23, "address": "1 flea street", "owner": "gee"}
+    {"id": 23, "address": "1 flea street"}
   ]
 }
