--- a/d2/beasts2.json
+++ b/d2/beasts2.json
@@ -2,7 +2,9 @@
   "animals": [
     {"id": 344, "species": "dog", "name": "vyall"},
     {"id": 312, "species": "cat", "name": "sorba"},
-    {"id": 1144, "species": "bird", "name": "sim"}
+    {"id": 1144, "species": "bird", "name": "sim"},
+    {"id": 2144, "species": "bird", "name": "slime"},
+    {"id": 10, "species": "horse", "name": "vahul"}
   ],
   "homes": [
     {"id": 78, "address": "2 north street", "owner": "vib"},
